SEO Optimization & Google search Console verification

--- a/index.html
+++ b/index.html
@@ -5,8 +5,78 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="effizyDev" content="Study and Travles Abroad">
+  <!-- Homepage Meta Descriptions -->
+  <meta name="description"
+    content="Highflyers Consult helps students achieve their dream of studying abroad with expert admission support, visa counseling, and educational tours.">
+  <meta name="description"
+    content="Your trusted travel and study abroad partner. We provide seamless admission, visa help, and educational guidance for global success.">
+  <meta name="description"
+    content="From admission to destination, Highflyers Consult supports every step of your travel and study journey.">
+  <meta name="description"
+    content="Study abroad made simple. Highflyers Consult offers expert advice, documentation help, and visa counseling for students worldwide.">
+  <meta name="description"
+    content="Highflyers Consult – Your one-stop agency for study abroad, career counseling, and global educational tours.">
+
+  <!-- Admission Processing Meta Descriptions -->
+  <meta name="description"
+    content="Get professional admission processing support for universities abroad. We handle everything from school selection to application submission.">
+  <meta name="description"
+    content="Smooth and stress-free international admission processing for students looking to study abroad.">
+  <meta name="description"
+    content="We make studying abroad easy with full admission application guidance and document support.">
+  <meta name="description"
+    content="Achieve your academic goals with Highflyers Consult's expert admission processing service for international schools.">
+  <meta name="description"
+    content="Apply to top universities abroad with confidence – we guide you through every step of the admission process.">
+
+  <!-- Educational Tours Meta Descriptions -->
+  <meta name="description"
+    content="Explore the world and learn beyond the classroom with our exciting and educational international tours.">
+  <meta name="description"
+    content="Highflyers Consult organizes educational tours that inspire students through global exposure and real-world learning.">
+  <meta name="description"
+    content="Join immersive student tours abroad – designed to educate, explore, and inspire young minds.">
+  <meta name="description"
+    content="Educational tours with Highflyers Consult combine learning and travel for a life-changing student experience.">
+  <meta name="description"
+    content="Discover new cultures and knowledge with our professionally organized educational tours for students.">
+
+  <!-- Visa Counseling Meta Descriptions -->
+  <meta name="description"
+    content="Get expert visa counseling from professionals who understand student visa requirements and application success tips.">
+  <meta name="description"
+    content="We provide personalized visa counseling services to help students secure their study permits easily.">
+  <meta name="description"
+    content="Need help with your student visa? Our team offers guidance, documentation help, and application tips.">
+  <meta name="description"
+    content="Navigate complex visa processes confidently with Highflyers Consult’s expert support.">
+  <meta name="description"
+    content="Maximize your visa approval chances with our tailored student visa counseling services.">
+
+  <!-- Career Counseling Meta Descriptions -->
+  <meta name="description"
+    content="Make the right career choices with our expert education and career counseling tailored to your goals.">
+  <meta name="description"
+    content="We help students choose the right courses and countries to match their career aspirations.">
+  <meta name="description"
+    content="Confused about your study path? Our career counseling guides you to the best decisions for your future.">
+  <meta name="description"
+    content="Plan your academic journey abroad with personalized career advice from experienced consultants.">
+  <meta name="description"
+    content="Highflyers Consult offers career counseling that helps students align their dreams with reality.">
+
+  <!-- Education Consultancy Meta Descriptions -->
+  <meta name="description"
+    content="Not sure what to study or where? We provide expert education consultancy to help you decide.">
+  <meta name="description" content="Get personalized advice on the best programs and countries for your study goals.">
+  <meta name="description"
+    content="Study abroad with confidence – we match your goals with top global education opportunities.">
+  <meta name="description" content="Education consultancy that focuses on you – your dreams, your goals, your success.">
+  <meta name="description"
+    content="Let us guide your academic future with the right education consulting tailored just for you.">
+
+
+  <meta name="google-site-verification" content="crh9L5HQ4UMVOFjAyArZtJNhnS_66kw4m2PU8vKxAI8" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon">
 
