Added Sitemap.xml To The Directory and Preloader

--- a/index.html
+++ b/index.html
@@ -102,7 +102,14 @@
 </head>
 
 <body>
-
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="loader-container">
+      <div class="loader-ring"></div>
+      <div class="loader-logo"></div>
+      <div class="loader-text">Loading...</div>
+    </div>
+  </div>
   <!-- Sub Header -->
   <!-- <div class="sub-header">
     <div class="container">
@@ -1127,6 +1134,54 @@
         window.open(whatsappUrl, '_blank');
       });
     });
+  </script>
+
+
+  <script>
+
+    /* ==========================================================================
+                              Preloader
+       ========================================================================== */
+
+    function initPreloader() {
+      // Check if preloader element exists
+      const preloader = document.getElementById('preloader');
+      if (!preloader) return;
+
+      // Debugging point 1
+      console.log('Preloader element found, initialization started');
+
+      // When ALL resources finish loading (images, fonts, etc)
+      window.addEventListener('load', function () {
+        // Debugging point 2
+        console.log('All page resources finished loading');
+
+        // Start fade-out (CSS handles the animation)
+        preloader.classList.add('fade-out');
+
+        // Remove preloader after animation completes
+        setTimeout(() => {
+          preloader.style.display = 'none';
+          // Debugging point 3
+          console.log('Preloader hidden');
+        }, 400);
+      });
+
+      // Fallback: Hide preloader if loading takes too long
+      const timeout = setTimeout(() => {
+        if (preloader) {
+          preloader.style.display = 'none';
+          // Debugging point 4
+          console.warn('Preloader timeout triggered');
+        }
+      }, 8000);
+
+      // Cleanup timeout if load completes normally
+      window.addEventListener('load', () => clearTimeout(timeout));
+    }
+
+    // Initialize when DOM is ready
+    document.addEventListener('DOMContentLoaded', initPreloader);
   </script>
 
 
