Canonical URLs Point to HTTPS

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 
 
   <title>Highflyers Consult</title>
+  <!-- Add this tag to tell Google to focus only on the HTTPS version -->
+  <link rel="canonical" href="https://highflyconsult.com/" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
