Added Open Graph Meta Tags That Enable Logo to Show along with The Domain Link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,27 @@
     content="Let us guide your academic future with the right education consulting tailored just for you.">
 
 
+  <!-- Verify Google Console -->
   <meta name="google-site-verification" content="crh9L5HQ4UMVOFjAyArZtJNhnS_66kw4m2PU8vKxAI8" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Highfly Consult - Your Travel and Study Abroad Partner" />
+  <meta property="og:description"
+    content="We help students and professionals with their travel and study abroad applications. Learn more!" />
+  <meta property="og:image" content="https://highflyconsult.com/assets/images/Logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://highflyconsult.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:title" content="Highfly Consult - Your Travel and Study Abroad Partner" />
+  <meta name="twitter:description"
+    content="We help students and professionals with their travel and study abroad applications. Learn more!" />
+  <meta name="twitter:image" content="https://highflyconsult.com/assets/images/Logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon">
