Remove Default Title Of Free CSS On Footer Section

--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
     </div>
     <footer class="footer">
       <p>Copyright © 2025 Highflyers Consult., Ltd. All Rights Reserved.
-        <br>Design: <a href="" target="_parent" title="free css templates">effizyDev</a>
+        <br>Design: <a href="" target="_parent" title="">effizyDev</a>
       </p>
     </footer>
   </section>
